@@ -1,6 +1,7 @@
 package com.estoque.realcar.config;
 
 import com.estoque.realcar.security.CustomUserDetailsService;
+import com.estoque.realcar.security.JwtAuthenticationFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -11,16 +12,17 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
+import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -28,60 +30,165 @@ import java.util.Arrays;
 @RequiredArgsConstructor
 public class SecurityConfig {
 
-    private final CustomUserDetailsService customUserDetailsService; // <-- INJETADO PELO LOMBOK
+    private final CustomUserDetailsService customUserDetailsService;
+
+    private final JwtAuthenticationFilter jwtAuthenticationFilter;
 
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
+
         http
+
+                // ==========================================
+                // CSRF
+                // ==========================================
                 .csrf(AbstractHttpConfigurer::disable)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .authorizeHttpRequests(authz -> authz
-                        // PERMITIR TODOS OS ENDPOINTS DE NOTAS FISCAIS
-                        .requestMatchers("/api/notas-fiscais/**").permitAll()
-                        // PERMITIR TODOS OS ENDPOINTS DE PRODUTOS
-                        .requestMatchers("/produtos/**").permitAll()
-                        // ENDPOINTS DE AUTENTICAÇÃO
-                        .requestMatchers("/api/auth/**").permitAll()
-                        // QUALQUER OUTRA REQUISIÇÃO PRECISA DE AUTENTICAÇÃO
-                        .anyRequest().authenticated()
+
+                // ==========================================
+                // CORS
+                // ==========================================
+                .cors(cors ->
+                        cors.configurationSource(corsConfigurationSource())
                 )
-                .sessionManagement(session -> session
-                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+
+                // ==========================================
+                // SESSÃO
+                // ==========================================
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(
+                                SessionCreationPolicy.STATELESS
+                        )
+                )
+
+                // ==========================================
+                // AUTHENTICATION PROVIDER
+                // ==========================================
+                .authenticationProvider(authenticationProvider())
+
+                // ==========================================
+                // AUTORIZAÇÃO
+                // ==========================================
+                .authorizeHttpRequests(auth -> auth
+
+                        // Login / autenticação
+                        .requestMatchers("/api/auth/**")
+                        .permitAll()
+
+                        // Notas fiscais
+                        .requestMatchers("/api/notas-fiscais/**")
+                        .authenticated()
+
+                        // Produtos
+                        .requestMatchers("/produtos/**")
+                        .permitAll()
+
+                        // OPTIONS - CORS
+                        .requestMatchers(
+                                org.springframework.http.HttpMethod.OPTIONS,
+                                "/**"
+                        )
+                        .permitAll()
+
+                        // Demais endpoints
+                        .anyRequest()
+                        .authenticated()
+                )
+
+                // ==========================================
+                // JWT FILTER
+                // ==========================================
+                .addFilterBefore(
+                        jwtAuthenticationFilter,
+                        UsernamePasswordAuthenticationFilter.class
                 );
 
         return http.build();
     }
 
+    // ==========================================
+    // CORS
+    // ==========================================
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:63342"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+
+        CorsConfiguration configuration =
+                new CorsConfiguration();
+
+        configuration.setAllowedOrigins(
+                List.of("http://localhost:63342")
+        );
+
+        configuration.setAllowedMethods(
+                List.of(
+                        "GET",
+                        "POST",
+                        "PUT",
+                        "DELETE",
+                        "OPTIONS"
+                )
+        );
+
+        configuration.setAllowedHeaders(
+                List.of(
+                        "Authorization",
+                        "Content-Type",
+                        "Accept"
+                )
+        );
+
         configuration.setAllowCredentials(true);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", configuration);
+        UrlBasedCorsConfigurationSource source =
+                new UrlBasedCorsConfigurationSource();
+
+        source.registerCorsConfiguration(
+                "/**",
+                configuration
+        );
+
         return source;
     }
 
+    // ==========================================
+    // AUTHENTICATION PROVIDER
+    // ==========================================
+
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
-        provider.setUserDetailsService(customUserDetailsService); // <-- USA O SERVICE INJETADO
-        provider.setPasswordEncoder(passwordEncoder());
+
+        DaoAuthenticationProvider provider =
+                new DaoAuthenticationProvider();
+
+        provider.setUserDetailsService(
+                customUserDetailsService
+        );
+
+        provider.setPasswordEncoder(
+                passwordEncoder()
+        );
+
         return provider;
     }
+
+    // ==========================================
+    // PASSWORD ENCODER
+    // ==========================================
 
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
     }
 
+    // ==========================================
+    // AUTHENTICATION MANAGER
+    // ==========================================
+
     @Bean
     public AuthenticationManager authenticationManager(
             AuthenticationConfiguration configuration
     ) throws Exception {
+
         return configuration.getAuthenticationManager();
     }
 }
